# football-fatigue-analytics

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  PlayerPulse_Codex_Master_Prompt_FINAL_Audited.md  PlayerPulse_Master_Prompt_Audit_Report.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pytest.ini
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_dataset_imports.py  0002_teams_players.py  0003_matches.py  0004_player_match_metrics.py  0005_risk_assessments.py  0006_processing_jobs.py
backend/app/: __init__.py  cli.py  main.py
backend/app/analytics/: __init__.py  anomaly.py  baselines.py  config.py  events.py  intensity.py  movement.py  risk.py  sprints.py  windows.py
backend/app/api/: errors.py
backend/app/api/routes/: jobs.py  (+5 more)
backend/app/core/: config.py  logging.py
backend/app/data/: __init__.py  cleaning.py  coordinates.py  manifest.py  processing.py  quality.py  registry.py  schemas.py  storage.py  synthetic.py
backend/app/db/: base.py  session.py
backend/app/repositories/: __init__.py  analytics.py  datasets.py  jobs.py  matches.py  teams.py
backend/app/services/: demo.py  processing.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_datasets.py  test_errors.py  test_jobs.py  test_matches.py  test_openapi_contract.py  test_players.py  test_risk_endpoints.py  test_system.py  test_upload_security.py
backend/tests/integration/: test_demo_persistence.py  test_demo_pipeline.py  test_migrations.py
(+96 files in other folders)
